<?xml version="1.0"?>
<package>

  <name>aioros_action</name>
  <version>0.0.1</version>
  <description>Python 3 asyncio based ROS actionlib</description>

  <author>Markus Grimm</author>
  <maintainer email="grimm.markus@gmail.com">Markus Grimm</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>aioros</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export />

</package>
